Fixed bug where wrong comments would be fetched when page was reloaded. Made scrollbar width smaller when on mobile. Fixed mobile nav bug using vh.

--- a/src/components/Homepage/car_section/CarSection.module.css
+++ b/src/components/Homepage/car_section/CarSection.module.css
@@ -13,6 +13,9 @@
 
   @media screen and (max-width: 700px) {
     padding: 5px;
+    &::-webkit-scrollbar {
+      width: 3px;
+    }
   }
 }
 
