--- a/src/components/Homepage/post_section/PostSection.module.css
+++ b/src/components/Homepage/post_section/PostSection.module.css
@@ -12,5 +12,8 @@
 
   @media screen and (max-width: 700px) {
     margin: 5px;
+    &::-webkit-scrollbar {
+      width: 3px;
+    }
   }
 }
