--- a/src/components/Navigation/left_side/MobileLeftSide.module.css
+++ b/src/components/Navigation/left_side/MobileLeftSide.module.css
@@ -1,5 +1,5 @@
 .nav {
-  height: 6vh;
+  height: 6dvh;
   background-color: var(--bg2-color);
   z-index: 3;
   position: fixed;
