--- a/src/index.css
+++ b/src/index.css
@@ -17,23 +17,30 @@
   box-sizing: border-box;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
   font-family: var(--body-font);
   background-color: var(--bg2-color);
   color: var(--side2-title);
   margin: 0;
+
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 .container {
   background-color: var(--bg-color);
   display: flex;
   max-width: 1600px;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   margin: 0 auto;
 
   @media screen and (max-width: 700px) {
-    height: 94vh;
+    height: 94dvh;
   }
 }
 
